Simplify setup instructions